style.css
/* ... */
/** Chat Messages **/
message-block {
	font-size: 1em;
	padding: 0.4rem 0.5rem;
	white-space: pre-wrap;
	/*border-left-width: 0.5em;
	border-left-style: solid;
	border-left-color: rgb(255,153,153);*/
	clear: both;
	overflow: auto;
	display: block;
}


.systemMessage {
	background-color: rgba(187,187,187, 0.2);
	font-weight: bold;
	color: #666;
	border-left: 0.5em solid rgb(187,187,187);
}
/*.ownMessage {
	background-color: rgba(255,153,153, 0.2);
}*/
message-block > time {
	float: right;
	font-weight: normal;
	padding-right: .5em;
	color: #666;
}
message-block > img.avatar {
	display: inline-block;
	width: 3.5rem;
	height: 3.5rem;
	border: 1px solid #777;
	margin-right: 0.5rem;
	float: left;
}
message-block > .username {
	margin-left: 4rem;
	display: block;
	/*white-space: pre;
	overflow: hidden;
	text-overflow: ellipsis;*/
}
/*.messageContents > p:first-child {
	margin-top: 0;
}*/

message-contents {
	display: block;
	vertical-align: top;
	overflow: auto;
}
message-contents > p.markup-root {
	margin: 0.2rem 0;
	padding: 0 0.2rem;
}
message-contents > p.edited {
	padding-left: 0.1rem;
	border-left: 3px solid gray;
}

message-contents img {
	max-width: 100%;
	max-height: 10vh;
	border: 1px solid silver;
}
.messageGap {
	border: 1px dashed gray;
	margin: 0.3rem 0;
}

html.f-deleteComment message-contents > p:hover {
	background-color: red;
}

html.f-editComment message-contents > p:hover {
	background-color: yellow;
}

html.f-deleteComment #\$chatDelete {
	background-color: red;
}

html.f-editComment #\$chatEdit {
	background-color: red;
}

message-contents > p[editing] {
	background-color: yellow;
}

html.f-editingComment .hideWhenEdit {
	display:none;
}

html:not(.f-editingComment) .showWhenEdit {
	display:none;
}

/****************
 ** Chat Input **
 ****************/
.inputPane {
	height: 3.25rem;
	overflow-y: hidden;
	border-top: 1px solid gray;
	flex-shrink: 0;
}

#\$chatTextarea {
	width: 100%;
	height: 100%;
	resize: none;
}

.chatSend {
	height: 100%;
}

.inputPane > table {
	width: 100%;
	height: 99%; /* crying */
	border-collapse: collapse;
}

.inputPane > table td {
	padding: 0;
	margin: 0;
	height: 100%;
}

/**********************
 ** Editor Info Pane **
 **********************/

/*****************
 ** Editor Pane **
 *****************/
.editorPane {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: column;
	flex-direction: column;
	-webkit-flex-grow: 1;
	flex-grow: 1;
}

.editorPreview {
	overflow-y: auto;
	min-height: 4rem;
}

.editorTextarea > textarea {
	resize: vertical;
	width: 100%;
	height: 40vh;
	min-height: 5rem;
	box-sizing: border-box;
}

/***************
 ** User Page **
 ***************/
.member {
	display: block;
	background-color: #EEE;
}

.memberName {
	padding: 0 0.5rem;
}

/* do we even need this */
.bottomSpacer {
	-webkit-flex-shrink: 0;
	flex-shrink: 0;
	height: 1.5rem;
}

.listItem {
	background-color: #EEE;
	border-bottom: 1px solid gray;
	padding: 0 0.2rem;
}

.activityMode > .listItem > *:first-child {
	margin-left: -0.2rem;
}

.activityCommentText {
	color: black;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: pre;
}

.listItem a {
	font-weight: bold;
}

.userPageBox {
	align-items: flex-start;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: row;
	flex-direction: row;
	max-height: 40vh;
	overflow: auto;
	border-bottom: 1px solid gray;
	/* todo: make this outside of scroller and have activity list scroll separately*/
}

.userPageAvatar {
	width: 10rem;
	height: 10rem;
	display: inline-block;
	-webkit-flex-shrink: 1;
	flex-shrink: 1;
/*	border-right: 1px solid gray;
	border-bottom: 1px solid gray;*/
	box-shadow: 2px 2px 5px gray;
	margin-bottom: 5px;
}

.userPageBox .pageContents {
	/*width: 10rem;*/
	-webkit-flex-basis: 0;
	flex-basis: 0;
}

table.form {
	border-collapse: collapse;
}

table.form td:first-child {
	/*text-align:right;*/
}
table.form td {
	padding: 0;
}
table.form th {
	padding: 0;
	text-align:right;
}

.userPageContents {
	-webkit-flex-grow: 1;
	flex-grow: 1;
}
.userPageBox .pageContents {
	max-height: 100%;
}

html:not(.f-myUserPage) .myUserPage {
	display: none;
}

@media (max-width: 700px) {
	.userPageBox {
		flex-direction: column;
		max-height: none;
	}
	.userPageBox .userPageContents {
		width: 100%;
		-webkit-flex-basis: auto;
		flex-basis: auto;
	}
}

/**********
 ** Page **
 **********/
button[data-selected] {
	background-color: lime;
} /* TODO FIX */
/* todo fix more! so this is an issue because vote buttons are now messed up by the button container insertion system, and ummm... something about classes.. ugh*/

/* hecko yo */
.pageContents {
	max-width:100%;
	overflow-x:auto;
	-webkit-flex-shrink: 0;
	flex-shrink: 0;
}

.pageInfoPane {
	background-color: #EEE;
	/*overflow: auto;*/
	-webkit-flex-shrink: 0;
	flex-shrink: 0;
	padding: 0 0.3rem;
	box-shadow: 0 2px 3px rgba(0,0,0,0.3);
}

.pageMetaIcon {
	width: 40px;
	height: 40px;
}

.html:not(.f-hasKey) .hasKey {
	display: none;
}

.metaKey.brokenKey .metaKey.invalidKey {
	text-decoration: line-through;
}

.metaKey {
	font-family: consolas;
	font-weight: bold;
	font-size: 1.3rem;
	margin: 0 0.5rem;
}

.metaTitle {
	font-family: consolas;
	margin: 0 0.3rem;
}

.gallery {
	width: 20rem;
	height: 10rem;
	display: inline-block;
	float: left;
}

.gallery img {
	max-height: 100%;
	max-width: 16rem;
}

.gallery button {
	height: 100%;
	width: 2rem;
}

.metaInfo {
	display: inline;
}

/***********
 ** Files **
 ***********/

.fileThumbnail {
	display: inline-block;
	width: 52px;
	height: 52px;
	cursor: pointer;
}

.fileThumbnail > img {
	max-width: 50px;
	max-height: 50px;
	border: 1px solid black;
	-webkit-box-sizing: content-box;
	box-sizing: content-box;
	vertical-align: top; /* what the fuck */
}

.fileView {
	max-width: 100%;
	max-height: 100%;
	border: 1px solid black;
}

.fileViewPane {
	overflow: auto;
}

html:not(.f-fileSelected) .fileSelected {
	display: none;
}

html:not(.f-fileUploading) .fileUploading {
	display: none;
}
/* ... */

